--- a/index.html
+++ b/index.html
@@ -5,46 +5,55 @@
   <title>RH Asesorías Tránsito</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <!-- Iconos de FontAwesome para burbujas -->
+  <!-- FontAwesome para íconos de burbujas -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body>
-  <header>
-    <h1>RH Asesorías Tránsito</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="servicios/index.html">Servicios</a></li>
-        <li><a href="sobrenosotros/index.html">Sobre Nosotros</a></li>
-        <li><a href="blog/index.html">Blog</a></li>
-        <li><a href="contactenos/index.html">Contáctenos</a></li>
-      </ul>
-    </nav>
+  <header class="header">
+    <div class="logo-nav">
+      <img src="https://github.com/echava1234/duransua2/raw/main/Logo-Duransua.png" alt="Logo" class="logo">
+      <nav>
+        <ul class="nav-list">
+          <li><a href="index.html">Inicio</a></li>
+          <li><a href="servicios.html">Servicios</a></li>
+          <li><a href="sobrenosotros.html">Sobre Nosotros</a></li>
+          <li><a href="blog.html">Blog</a></li>
+          <li><a href="contactenos.html">Contáctenos</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
-
   <main>
-    <section class="bienvenida">
-      <h2>Bienvenido a RH Asesorías de Tránsito</h2>
-      <p>Soluciones rápidas y confiables para tus trámites de tránsito en Colombia.</p>
+    <section class="hero">
+      <h1>Bienvenido a RH Asesorías Tránsito</h1>
+      <p>Trámites de tránsito sin complicaciones, seguros y rápidos para ti.</p>
+      <a href="servicios.html" class="cta-btn">Ver servicios</a>
     </section>
-
-    <section class="pegatina-servicios">
-      <div class="pegatina">¡Nuevo servicio!</div>
-      <strong>Traspasos 100% digitales</strong>
+    <section class="info">
+      <div class="info-card">
+        <h2>¿Por qué elegirnos?</h2>
+        <ul>
+          <li>Atención personalizada y rápida</li>
+          <li>Expertos en trámites de tránsito</li>
+          <li>Todas las gestiones en un solo lugar</li>
+        </ul>
+      </div>
+      <div class="info-card destacado">
+        <h2>¡Nuevo servicio!</h2>
+        <div class="pegatina-nuevo">100% Digital</div>
+        <p>Realiza tu traspaso de vehículo totalmente en línea.</p>
+      </div>
     </section>
-
-    <aside class="esquina-servicios">
-      <p>Prestamos servicios de <strong>Efecty</strong>, <strong>Servientrega</strong> y <strong>Coordinadora</strong></p>
-    </aside>
   </main>
-
+  <div class="floating-services">
+    <span>Prestamos servicios de <strong>Efecty</strong>, <strong>Servientrega</strong> y <strong>Coordinadora</strong></span>
+  </div>
   <!-- Burbujas flotantes -->
   <div class="burbujas">
     <a href="https://wa.me/573150459589" class="burbuja whatsapp" title="WhatsApp" target="_blank"><i class="fab fa-whatsapp"></i></a>
     <a href="mailto:rhasesoriastransito@gmail.com" class="burbuja correo" title="Correo"><i class="fas fa-envelope"></i></a>
     <a href="https://instagram.com/" class="burbuja instagram" title="Instagram" target="_blank"><i class="fab fa-instagram"></i></a>
   </div>
-
   <footer>
     <p>&copy; 2025 RH Asesorías Tránsito</p>
   </footer>
