--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <title>RH Asesorías Tránsito</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <!-- Google Fonts: Montserrat & Lato -->
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Montserrat:wght@700;900&display=swap" rel="stylesheet">
   <!-- FontAwesome para íconos de burbujas -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
@@ -23,28 +25,137 @@
       </nav>
     </div>
   </header>
+
+  <!-- SECCIÓN HERO -->
   <main>
     <section class="hero">
-      <h1>Bienvenido a RH Asesorías Tránsito</h1>
-      <p>Trámites de tránsito sin complicaciones, seguros y rápidos para ti.</p>
-      <a href="servicios.html" class="cta-btn">Ver servicios</a>
+      <h1>RH Asesorías Tránsito</h1>
+      <p>Expertos en trámites de tránsito en Colombia.<br>
+         Soluciones ágiles, confiables y personalizadas para ti y tu empresa.</p>
+      <a href="servicios.html" class="cta-btn">Conoce Nuestros Servicios</a>
     </section>
+
+    <!-- BENEFICIOS -->
     <section class="info">
       <div class="info-card">
         <h2>¿Por qué elegirnos?</h2>
         <ul>
+          <li>+10 años de experiencia</li>
+          <li>Trámites 100% legales y transparentes</li>
           <li>Atención personalizada y rápida</li>
-          <li>Expertos en trámites de tránsito</li>
-          <li>Todas las gestiones en un solo lugar</li>
+          <li>Gestión en todo el país</li>
+          <li>Soporte integral post-servicio</li>
         </ul>
       </div>
       <div class="info-card destacado">
         <h2>¡Nuevo servicio!</h2>
         <div class="pegatina-nuevo">100% Digital</div>
-        <p>Realiza tu traspaso de vehículo totalmente en línea.</p>
+        <p>Traspasos de vehículos completamente en línea.<br>Sin filas, sin papeles, sin pérdidas de tiempo.</p>
+      </div>
+    </section>
+
+    <!-- SERVICIOS DESTACADOS -->
+    <section class="destacados-home">
+      <h2>Servicios más solicitados</h2>
+      <div class="servicios-home-grid">
+        <div class="servicio-home">
+          <i class="fas fa-exchange-alt"></i>
+          <h3>Traspasos de vehículos</h3>
+          <p>Transferencia de propiedad 100% segura y eficiente.</p>
+        </div>
+        <div class="servicio-home">
+          <i class="fas fa-id-card"></i>
+          <h3>Licencias de conducción</h3>
+          <p>Expedición, renovación y duplicados.</p>
+        </div>
+        <div class="servicio-home">
+          <i class="fas fa-car"></i>
+          <h3>Duplicado de placas/matrícula</h3>
+          <p>¡No pierdas tiempo! Gestionamos tus duplicados en tiempo récord.</p>
+        </div>
+        <div class="servicio-home">
+          <i class="fas fa-hand-holding-usd"></i>
+          <h3>Pago de impuestos y comparendos</h3>
+          <p>Ponte al día con tus obligaciones fácilmente.</p>
+        </div>
+      </div>
+      <div class="ver-todos-servicios">
+        <a href="servicios.html" class="cta-btn">Ver todos los servicios</a>
+      </div>
+    </section>
+
+    <!-- CÓMO TRABAJAMOS -->
+    <section class="proceso-home">
+      <h2>¿Cómo trabajamos?</h2>
+      <div class="proceso-steps">
+        <div class="proceso-step">
+          <span class="circle-step">1</span>
+          <p>Contáctanos y cuéntanos tu caso</p>
+        </div>
+        <div class="proceso-step">
+          <span class="circle-step">2</span>
+          <p>Recibimos y revisamos tus documentos</p>
+        </div>
+        <div class="proceso-step">
+          <span class="circle-step">3</span>
+          <p>Gestionamos tu trámite ante las entidades</p>
+        </div>
+        <div class="proceso-step">
+          <span class="circle-step">4</span>
+          <p>¡Listo! Te entregamos tu gestión finalizada</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- TESTIMONIOS -->
+    <section class="testimonios-home">
+      <h2>Lo que dicen nuestros clientes</h2>
+      <div class="testimonios-grid">
+        <blockquote>
+          <p>“El servicio fue rápido, seguro y confiable. ¡Muy recomendados!”</p>
+          <footer>— Laura G., Medellín</footer>
+        </blockquote>
+        <blockquote>
+          <p>“Solucionaron mi traspaso sin estrés y con excelente atención.”</p>
+          <footer>— Carlos P., Envigado</footer>
+        </blockquote>
+        <blockquote>
+          <p>“Me ayudaron con todo el proceso y resolvieron mis dudas.”</p>
+          <footer>— Mónica V., Itagüí</footer>
+        </blockquote>
+      </div>
+    </section>
+
+    <!-- BLOG / NOTICIAS RECIENTES -->
+    <section class="noticias-home">
+      <h2>Noticias importantes de tránsito</h2>
+      <div class="noticias-grid">
+        <article>
+          <h3>¡Atención! Nuevo pico y placa en Medellín</h3>
+          <p>Desde el 1 de junio cambia la rotación para vehículos particulares y motos. <a href="blog.html">Ver más</a></p>
+        </article>
+        <article>
+          <h3>Trámites de tránsito ahora más digitales</h3>
+          <p>Muchos trámites, incluyendo traspasos, ya pueden hacerse por internet. <a href="blog.html">Infórmate aquí</a></p>
+        </article>
+      </div>
+      <div class="ver-todos-blog">
+        <a href="blog.html" class="cta-btn">Ver todas las noticias</a>
+      </div>
+    </section>
+
+    <!-- CONTACTO RÁPIDO -->
+    <section class="contacto-rapido-home">
+      <h2>¿Necesitas ayuda inmediata?</h2>
+      <p>¡Llámanos o escríbenos por WhatsApp!</p>
+      <div class="contacto-rapido-datos">
+        <a href="tel:3150459589"><i class="fas fa-phone"></i> 3150459589</a>
+        <a href="tel:3143159586"><i class="fas fa-phone"></i> 3143159586</a>
+        <a href="mailto:rhasesoriastransito@gmail.com"><i class="fas fa-envelope"></i> rhasesoriastransito@gmail.com</a>
       </div>
     </section>
   </main>
+
   <div class="floating-services">
     <span>Prestamos servicios de <strong>Efecty</strong>, <strong>Servientrega</strong> y <strong>Coordinadora</strong></span>
   </div>
