--- a/servicios.html
+++ b/servicios.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Servicios - RH Asesorías Tránsito</title>
   <link rel="stylesheet" href="style.css">
+  <!-- FontAwesome para los íconos -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body>
@@ -25,37 +26,48 @@
     <h1 class="titulo-servicios"><i class="fas fa-car"></i> Nuestros Servicios</h1>
     <ul class="servicios-lista">
       <li>
+        <i class="fas fa-arrows-rotate servicio-icono"></i>
         <strong>Traspasos de vehículos:</strong> Transferencia legal y segura de propiedad de vehículos.
       </li>
       <li>
+        <i class="fas fa-clone servicio-icono"></i>
         <strong>Duplicados de matrícula:</strong> Obtención de nueva matrícula en caso de pérdida o deterioro.
       </li>
       <li>
+        <i class="fas fa-unlock-keyhole servicio-icono"></i>
         <strong>Levantamiento de prenda vehicular:</strong> Eliminación de restricciones financieras sobre tu vehículo.
       </li>
       <li>
+        <i class="fas fa-right-left servicio-icono"></i>
         <strong>Traslados de cuentas:</strong> Cambio de registro del vehículo entre organismos de tránsito.
       </li>
       <li>
+        <i class="fas fa-file-invoice-dollar servicio-icono"></i>
         <strong>Pago de impuestos:</strong> Asesoría y gestión de impuestos vehiculares.
       </li>
       <li>
+        <i class="fas fa-car-side servicio-icono"></i>
         <strong>Duplicado de placas:</strong> Tramitación de placas nuevas por pérdida o daño.
       </li>
       <li>
+        <i class="fas fa-file-invoice servicio-icono"></i>
         <strong>Pagos de comparendos:</strong> Orientación y pago de multas de tránsito.
       </li>
       <li>
+        <i class="fas fa-id-card servicio-icono"></i>
         <strong>Licencias de conducción:</strong> Expedición, renovación y duplicado de licencias.
       </li>
       <li>
+        <i class="fas fa-car-burst servicio-icono"></i>
         <strong>Matrículas iniciales:</strong> Matrícula de vehículos nuevos en cualquier ciudad.
       </li>
       <li>
+        <i class="fas fa-shield-heart servicio-icono"></i>
         <strong>SOAT:</strong> Emisión de tu seguro obligatorio de manera rápida y confiable.
       </li>
       <li class="nuevo-servicio">
         <span class="pegatina">Nuevo</span>
+        <i class="fas fa-mobile-screen-button servicio-icono"></i>
         <strong>Traspasos 100% digitales:</strong> Haz tu traspaso de vehículo completamente en línea, sin desplazamientos.
       </li>
     </ul>
