--- a/sobrenosotros.html
+++ b/sobrenosotros.html
@@ -25,22 +25,60 @@
     <section class="about-section">
       <h1>Sobre Nosotros</h1>
       <p>
-        Somos RH Asesorías Tránsito, una empresa dedicada a facilitar todos tus trámites de tránsito, brindando asesoría profesional y atención personalizada. Con años de experiencia y un equipo comprometido, garantizamos soluciones ágiles y de confianza para nuestros clientes.
+        <strong>RH Asesorías Tránsito</strong> es una empresa líder dedicada a la gestión y asesoría de trámites de tránsito en Colombia. Con más de 10 años de experiencia, hemos ayudado a miles de personas y empresas a resolver sus necesidades de movilidad de manera ágil, transparente y segura.
       </p>
       <div class="about-img">
-        <img src="https://github.com/echava1234/duransua2/raw/main/consultoria-meeta-01.png" alt="Nuestro equipo">
+        <img src="https://images.unsplash.com/photo-1519125323398-675f0ddb6308?auto=format&fit=crop&w=600&q=80" alt="Nuestro equipo">
       </div>
-      <h2>Nuestra Misión</h2>
+      <h2>Nuestra Historia</h2>
       <p>
-        Proveer servicios integrales de trámites de tránsito, asegurando la satisfacción y tranquilidad de nuestros usuarios.
+        Nacimos de la necesidad de simplificar los procesos de tránsito, eliminando el estrés y la incertidumbre para nuestros clientes. Desde nuestros inicios en Medellín, hemos crecido gracias a la confianza de quienes valoran la honestidad, la eficiencia y la atención personalizada.
       </p>
-      <h2>Nuestros Valores</h2>
+      <h2>Misión</h2>
+      <p>
+        Brindar soluciones integrales y confiables en trámites de tránsito, asegurando la satisfacción y tranquilidad de nuestros usuarios mediante un acompañamiento cercano y profesional.
+      </p>
+      <h2>Visión</h2>
+      <p>
+        Ser la empresa de asesorías de tránsito más reconocida a nivel nacional por nuestra innovación, transparencia y excelencia en el servicio.
+      </p>
+      <h2>Valores</h2>
       <ul>
-        <li>Transparencia</li>
-        <li>Agilidad</li>
-        <li>Compromiso</li>
-        <li>Innovación</li>
+        <li><b>Transparencia</b>: procesos claros y honestos.</li>
+        <li><b>Agilidad</b>: respuesta y gestión rápida.</li>
+        <li><b>Compromiso</b>: acompañamos de principio a fin.</li>
+        <li><b>Innovación</b>: trámites 100% digitales y seguros.</li>
+        <li><b>Respeto</b>: atención amable y personalizada.</li>
       </ul>
+      <h2>¿Por qué elegir RH Asesorías?</h2>
+      <ul>
+        <li><i class="fas fa-user-check servicio-icono"></i> Atención personalizada y cercana.</li>
+        <li><i class="fas fa-shield-alt servicio-icono"></i> Seguridad y respaldo en cada trámite.</li>
+        <li><i class="fas fa-bolt servicio-icono"></i> Procesos ágiles y sin complicaciones.</li>
+        <li><i class="fas fa-globe servicio-icono"></i> Cobertura en todo el país.</li>
+        <li><i class="fas fa-thumbs-up servicio-icono"></i> 98% de satisfacción de nuestros clientes.</li>
+      </ul>
+      <div class="about-achievements">
+        <div>
+          <i class="fas fa-users"></i>
+          <span>+2,500</span>
+          <p>Clientes Satisfechos</p>
+        </div>
+        <div>
+          <i class="fas fa-briefcase"></i>
+          <span>10+</span>
+          <p>Años de Experiencia</p>
+        </div>
+        <div>
+          <i class="fas fa-star"></i>
+          <span>4.9/5</span>
+          <p>Calificación en Servicio</p>
+        </div>
+      </div>
+      <blockquote class="about-testimonio">
+        “RH Asesorías nos ayudó a resolver nuestro trámite de tránsito en tiempo récord y con total transparencia. ¡Gracias!”<br>
+        <span>- Cliente feliz</span>
+      </blockquote>
     </section>
   </main>
   <div class="floating-services">
