--- a/servicios.html
+++ b/servicios.html
@@ -23,54 +23,67 @@
     </div>
   </header>
   <main>
-    <h1 class="titulo-servicios"><i class="fas fa-car"></i> Nuestros Servicios</h1>
-    <ul class="servicios-lista">
-      <li>
-        <i class="fas fa-arrows-rotate servicio-icono"></i>
-        <strong>Traspasos de vehículos:</strong> Transferencia legal y segura de propiedad de vehículos.
-      </li>
-      <li>
-        <i class="fas fa-clone servicio-icono"></i>
-        <strong>Duplicados de matrícula:</strong> Obtención de nueva matrícula en caso de pérdida o deterioro.
-      </li>
-      <li>
-        <i class="fas fa-unlock-keyhole servicio-icono"></i>
-        <strong>Levantamiento de prenda vehicular:</strong> Eliminación de restricciones financieras sobre tu vehículo.
-      </li>
-      <li>
-        <i class="fas fa-right-left servicio-icono"></i>
-        <strong>Traslados de cuentas:</strong> Cambio de registro del vehículo entre organismos de tránsito.
-      </li>
-      <li>
-        <i class="fas fa-file-invoice-dollar servicio-icono"></i>
-        <strong>Pago de impuestos:</strong> Asesoría y gestión de impuestos vehiculares.
-      </li>
-      <li>
-        <i class="fas fa-car-side servicio-icono"></i>
-        <strong>Duplicado de placas:</strong> Tramitación de placas nuevas por pérdida o daño.
-      </li>
-      <li>
-        <i class="fas fa-file-invoice servicio-icono"></i>
-        <strong>Pagos de comparendos:</strong> Orientación y pago de multas de tránsito.
-      </li>
-      <li>
-        <i class="fas fa-id-card servicio-icono"></i>
-        <strong>Licencias de conducción:</strong> Expedición, renovación y duplicado de licencias.
-      </li>
-      <li>
-        <i class="fas fa-car-burst servicio-icono"></i>
-        <strong>Matrículas iniciales:</strong> Matrícula de vehículos nuevos en cualquier ciudad.
-      </li>
-      <li>
-        <i class="fas fa-shield-heart servicio-icono"></i>
-        <strong>SOAT:</strong> Emisión de tu seguro obligatorio de manera rápida y confiable.
-      </li>
-      <li class="nuevo-servicio">
-        <span class="pegatina">Nuevo</span>
-        <i class="fas fa-mobile-screen-button servicio-icono"></i>
-        <strong>Traspasos 100% digitales:</strong> Haz tu traspaso de vehículo completamente en línea, sin desplazamientos.
-      </li>
-    </ul>
+    <section class="destacados-home">
+      <h2>Nuestros Servicios</h2>
+      <div class="servicios-home-grid">
+        <div class="servicio-home">
+          <i class="fas fa-arrows-rotate"></i>
+          <h3>Traspasos de vehículos</h3>
+          <p>Transferencia legal y segura de propiedad de vehículos.</p>
+        </div>
+        <div class="servicio-home">
+          <i class="fas fa-clone"></i>
+          <h3>Duplicados de matrícula</h3>
+          <p>Obtención de nueva matrícula en caso de pérdida o deterioro.</p>
+        </div>
+        <div class="servicio-home">
+          <i class="fas fa-unlock-keyhole"></i>
+          <h3>Levantamiento de prenda</h3>
+          <p>Eliminación de restricciones financieras sobre tu vehículo.</p>
+        </div>
+        <div class="servicio-home">
+          <i class="fas fa-right-left"></i>
+          <h3>Traslados de cuentas</h3>
+          <p>Cambio de registro del vehículo entre organismos de tránsito.</p>
+        </div>
+        <div class="servicio-home">
+          <i class="fas fa-file-invoice-dollar"></i>
+          <h3>Pago de impuestos</h3>
+          <p>Asesoría y gestión de impuestos vehiculares.</p>
+        </div>
+        <div class="servicio-home">
+          <i class="fas fa-car-side"></i>
+          <h3>Duplicado de placas</h3>
+          <p>Tramitación de placas nuevas por pérdida o daño.</p>
+        </div>
+        <div class="servicio-home">
+          <i class="fas fa-file-invoice"></i>
+          <h3>Pagos de comparendos</h3>
+          <p>Orientación y pago de multas de tránsito.</p>
+        </div>
+        <div class="servicio-home">
+          <i class="fas fa-id-card"></i>
+          <h3>Licencias de conducción</h3>
+          <p>Expedición, renovación y duplicado de licencias.</p>
+        </div>
+        <div class="servicio-home">
+          <i class="fas fa-car-burst"></i>
+          <h3>Matrículas iniciales</h3>
+          <p>Matrícula de vehículos nuevos en cualquier ciudad.</p>
+        </div>
+        <div class="servicio-home">
+          <i class="fas fa-shield-heart"></i>
+          <h3>SOAT</h3>
+          <p>Emisión de tu seguro obligatorio de manera rápida y confiable.</p>
+        </div>
+        <div class="servicio-home servicio-nuevo">
+          <span class="pegatina-nuevo">Nuevo</span>
+          <i class="fas fa-mobile-screen-button"></i>
+          <h3>Traspasos 100% digitales</h3>
+          <p>Haz tu traspaso de vehículo completamente en línea, sin desplazamientos.</p>
+        </div>
+      </div>
+    </section>
   </main>
   <div class="floating-services">
     <span>Prestamos servicios de <strong>Efecty</strong>, <strong>Servientrega</strong> y <strong>Coordinadora</strong></span>
