--- a/sobrenosotros.html
+++ b/sobrenosotros.html
@@ -88,6 +88,71 @@
       </div>
     </section>
 
+    <!-- Línea de tiempo -->
+    <section class="about-timeline">
+      <h2>Nuestra Línea de Tiempo</h2>
+      <div class="timeline-container">
+        <div class="timeline-item">
+          <span class="timeline-dot"><i class="fas fa-flag"></i></span>
+          <div class="timeline-line"></div>
+          <div class="timeline-content">
+            <span class="timeline-date">2013</span>
+            Fundación de RH Asesorías Tránsito en Medellín, con la misión de simplificar los trámites vehiculares para todos.
+          </div>
+        </div>
+        <div class="timeline-item">
+          <span class="timeline-dot"><i class="fas fa-user-plus"></i></span>
+          <div class="timeline-line"></div>
+          <div class="timeline-content">
+            <span class="timeline-date">2016</span>
+            Superamos los 1,000 clientes asesorados con éxito en trámites de tránsito y transporte.
+          </div>
+        </div>
+        <div class="timeline-item">
+          <span class="timeline-dot"><i class="fas fa-globe"></i></span>
+          <div class="timeline-line"></div>
+          <div class="timeline-content">
+            <span class="timeline-date">2019</span>
+            Expansión de cobertura a nivel nacional y adopción de trámites digitales para mayor comodidad.
+          </div>
+        </div>
+        <div class="timeline-item">
+          <span class="timeline-dot"><i class="fas fa-mobile-alt"></i></span>
+          <div class="timeline-line"></div>
+          <div class="timeline-content">
+            <span class="timeline-date">2022</span>
+            Lanzamiento de la modalidad de traspasos 100% digitales, pioneros en el país en innovación y servicio.
+          </div>
+        </div>
+        <div class="timeline-item">
+          <span class="timeline-dot"><i class="fas fa-award"></i></span>
+          <div class="timeline-content">
+            <span class="timeline-date">2025</span>
+            Alcanzamos +2,500 clientes satisfechos, consolidando la confianza y el liderazgo en el sector.
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Aliados/Partners -->
+    <section class="about-partners">
+      <h2>Nuestros Aliados</h2>
+      <div class="partners-logos">
+        <div class="partner-logo">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/2/2a/Logo_Efecty.png" alt="Efecty">
+        </div>
+        <div class="partner-logo">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/3/3b/Logo_Servientrega.png" alt="Servientrega">
+        </div>
+        <div class="partner-logo">
+          <img src="https://coordinadora.com/assets/images/logo.png" alt="Coordinadora">
+        </div>
+        <div class="partner-logo">
+          <img src="https://seeklogo.com/images/F/fasecolda-logo-C2E8E6B9B2-seeklogo.com.png" alt="Fasecolda">
+        </div>
+      </div>
+    </section>
+
     <section class="about-achievements">
       <div>
         <i class="fas fa-users"></i>
