--- a/servicios.html
+++ b/servicios.html
@@ -10,7 +10,7 @@
 <body>
   <header class="header">
     <div class="logo-nav">
-      <img src="https://github.com/echava1234/duransua2/raw/main/Logo-Duransua.png" alt="Logo" class="logo">
+      <img src="imagenes/LOGO 2025 .jpg" alt="Logo" class="logo">
       <nav>
         <ul class="nav-list">
           <li><a href="index.html">Inicio</a></li>
