--- a/contactenos.html
+++ b/contactenos.html
@@ -25,7 +25,7 @@
 <body>
   <header class="header">
     <div class="logo-nav">
-      <img src="imagenes/LOGO 2025 .jpg" alt="Logo" class="logo">
+      <img src="imagenes/LOGO 2025 .png" alt="Logo" class="logo">
       <nav>
         <ul class="nav-list">
           <li><a href="index.html">Inicio</a></li>
